fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
 .intro {
   height: 100%;
   text-align: center;
-  margin: 0px;
 }
 
 .typing {
@@ -38,8 +37,6 @@ body {
   from { width : 0 }
   to { width : 100% }
 }
-
-
 .menu {
   text-align: right;
 }
@@ -58,13 +55,13 @@ body {
 
 
 
-.current {
+.current{
   background-color: #fd999d;
   height: 100%;
   text-align: center;
 }
 
-#current_title{
+#current_title, #education_title, #blog_title, #contact_title {
   font-family: 'Quicksand', sans-serif;
   font-size: 50px;
   text-align: center;
@@ -112,7 +109,7 @@ body {
   margin: 75px;
   margin-right: 0px;
   border-radius: 40%;
-  border: 5px solid white;
+  border: 7px solid #fd999d;
   width: 250px;
   height: 300px;
 }
@@ -121,48 +118,80 @@ body {
 
 .education {
   background-color: #fd999d;
-  height: 100%;
+  height: 125%;
   text-align: center;
 }
 
-.schools {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 35px;
-  color: white;
+.college {
+  float: left;
+  width: 50%;
 }
 
-#high_school_title, #college_title {
+.high_school {
+  float: right;
+  width: 50%;
+}
+
+.college_classes, .high_school_classes {
+  margin-left: 150px;
+  margin-right: 75px;
+}
+
+.high_school_classes {
+  margin-left: 75px;
+  margin-right: 150px;
+}
+
+
+#high_school_title, #college_title, #other_title {
   margin: 75px;
   margin-top: 0px;
   color: #ffc4c4;
+  margin-bottom: 25px;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 35px;
+}
+
+#other_title {
+  text-align: center;
+  padding-top: 30px;
 }
 
 #education_title {
-  font-family: 'Quicksand', sans-serif;
-  font-size: 50px;
+  padding-bottom: 50px;
+}
+
+#current, #complete, #upcoming {
+  font-family: 'Inconsolata', monospace;
+  font-size: 25px;
+  text-align: left;
+  color: white;
+  padding-top: 15px;
+}
+
+.high_school_classes, .college_classes, #stats {
+  font-family: 'Inconsolata', monospace;
+  font-size: 21px;
+  line-height: 25px;
   text-align: center;
   color: white;
-  padding: 75px;
-  padding-bottom: 0px;
-  margin-bottom: 50px;
 }
 
 
 
 .blog {
-  height: 100%;
+  height: 60%;
   background-color: #ffc4c4;
   text-align: center;
   color: white;
   font-size: 30px;
   line-height: 35px;
   font-family: 'Inconsolata', monospace;
+  margin: 0px;
 }
 
-#blog_title {
+
+#blog_title, #contact_title {
   font-family: 'Quicksand', sans-serif;
   font-size: 50px;
   text-align: center;
@@ -175,7 +204,6 @@ body {
 #freshman_blog_link {
     color: white;
     text-decoration: none;
-
 }
 
 #quotes_link {
@@ -183,6 +211,15 @@ body {
   text-decoration: none;
 }
 
+.contact {
+  height: 50%;
+  background-color: #fd999d;
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  line-height: 35px;
+  font-family: 'Inconsolata', monospace;
+}
 
 
 
